<resources>
    <string name="app_name">DogManagementApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="appName">#DOGZAPP</string>
    <string name="logo">logo</string>
    <string name="dog_name">Dog name</string>
    <string name="dog_image">Dog image</string>
    <string name="plus">+</string>
    <string name="eksportuj_dane_do_pliku">Eksportuj dane do pliku</string>
    <string name="importuj_dane_z_pliku">Importuj dane z pliku</string>
    <string name="alert_szczepienia">Alert - szczepienia</string>
    <string name="alert_urodziny">Alert - urodziny</string>
    <string name="alert_odrobaczanie">Alert - odrobaczanie</string>
    <string name="przypominajki">Przypominajki</string>
    <string name="checkbox">CheckBox</string>
    <string name="zapisz">ZAPISZ</string>
    <string name="zdj_cie_z_galerii">zdjęcie z galerii</string>
    <string name="psy">Psy</string>
    <string name="p_e2">Płeć</string>
    <string name="hodowla">Hodowla</string>
    <string name="notatki">Notatki</string>
    <string name="znaki_szczeg_lne">Znaki szczególne</string>
    <string name="w_a_ciciel">Właściciel</string>
    <string name="tatua">Tatuaż</string>
    <string name="chip">Chip</string>
    <string name="p_e3">Płeć</string>
    <string name="kolor_psa">Kolor psa</string>
    <string name="dada_urodzenia">Dada urodzenia</string>
    <string name="rasa_psa">Rasa psa</string>
    <string name="imi_psa">Imię psa</string>
    <string name="p_e">Płeć:</string>
    <string name="kolor">Kolor:</string>
    <string name="data_urodzenia">Data urodzenia:</string>
    <string name="rasa">Rasa:</string>
    <string name="imi">Imię:</string>
    <string name="dog_photo">Dog photo</string>
    <string name="powr_t">Powrót</string>
    <string name="usu_z_listy">Usuń z listy</string>
    <string name="anuluj">Anuluj</string>
</resources>
