<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="90dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/recyclerContainer"
                    android:layout_width="0dp"
                    android:layout_height="250dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/roundcornersrecyclerview"
                    app:layout_constraintBottom_toTopOf="@+id/textViewbck"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerViewMain"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center|center_horizontal|fill_horizontal"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="@drawable/roundcornersrecyclerviewwhiteframe"
                        android:scrollbars="vertical"
                        android:soundEffectsEnabled="false"
                        android:verticalScrollbarPosition="right"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/addDogButton"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/round_white"
                        android:text="@string/plus"
                        android:textColor="#000000"
                        android:textSize="36sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/textViewbck"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginBottom="76dp"
                    android:background="@drawable/circlestroke"
                    android:gravity="bottom"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.50"
                    app:layout_constraintStart_toStartOf="parent"
                    android:contentDescription="@string/psy" />

                <Button
                    android:id="@+id/dogButton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="225dp"
                    android:background="@drawable/round_black"
                    android:drawableStart="@drawable/ic_dog"
                    android:drawablePadding="100dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewbck"
                    app:layout_constraintEnd_toEndOf="@+id/textViewbck"
                    app:layout_constraintHorizontal_bias="0.9"
                    app:layout_constraintStart_toStartOf="@+id/textViewbck" />

                <Button
                    android:id="@+id/healthButton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginBottom="225dp"
                    android:background="@drawable/round_black"
                    android:drawableStart="@drawable/ic_health"
                    android:drawablePadding="100dp"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewbck"
                    app:layout_constraintEnd_toEndOf="@+id/textViewbck"
                    app:layout_constraintStart_toStartOf="@+id/textViewbck" />

                <Button
                    android:id="@+id/infoButton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="250dp"
                    android:background="@drawable/round_black"
                    android:drawableStart="@drawable/ic_info"
                    android:drawablePadding="100dp"
                    app:layout_constraintEnd_toEndOf="@+id/textViewbck"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textViewbck"
                    app:layout_constraintTop_toTopOf="@+id/textViewbck" />

                <Button
                    android:id="@+id/emergencyButton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginStart="240dp"
                    android:layout_marginBottom="60dp"
                    android:background="@drawable/round_black"
                    android:drawableStart="@drawable/ic_message"
                    android:drawablePadding="100dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewbck"
                    app:layout_constraintStart_toStartOf="@+id/textViewbck" />

                <Button
                    android:id="@+id/settingsButton"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="240dp"
                    android:layout_marginBottom="60dp"
                    android:background="@drawable/round_black"
                    android:drawableStart="@drawable/ic_settings"
                    android:drawablePadding="100dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewbck"
                    app:layout_constraintEnd_toEndOf="@+id/textViewbck" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="220dp"
                    android:layout_height="109dp"
                    android:contentDescription="@string/logo"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewbck"
                    app:layout_constraintEnd_toEndOf="@+id/textViewbck"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="@+id/textViewbck"
                    app:layout_constraintTop_toTopOf="@+id/textViewbck"
                    app:srcCompat="@drawable/anigif"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="294dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/appName"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>